# market-analyst

./: .gitignore  README.md  pyproject.toml
docs/superpowers/specs/: 2026-03-21-market-analyst-design.md
src/: config.py
src/agents/: fundamental.py  sentiment.py  technical.py
src/api/: main.py  schemas.py
src/graph/: graph.py  nodes.py  state.py
src/tools/: indicators.py  search.py  yahoo.py
src/ui/: app.py
tests/: test_api.py  test_graph.py  test_tools.py  test_ui.py
